--- a/views/index.erb
+++ b/views/index.erb
@@ -9,7 +9,7 @@
 				<th>title</th>
 				<th>count</th>
 			</tr>
-			<% [array].each_with_index {|entry, i| %>
+			<% @result.each_with_index {|entry, i| %>
 			<tr>
 				<td><%= i + 1 %></td>
 				<td><a href="<%= entry['url'] %>"><%= entry['title'] %></a></td>
